fixes some warnings from error-prone report